# tier1-rejuvenation-suite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CICD_IMPLEMENTATION_COMPLETE.md  CITATION.cff  CI_CD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ETHICS_DATA_USE.md  FINAL_COMPLETE_VALIDATION.py  LICENSE  LINKEDIN_POST.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  SCIENTIFIC_AUDIT_REPORT.md  SCIENTIFIC_CORRECTIONS_COMPLETE.md  TESTING.md  TIER1_Integration_Report.html  USER_GUIDE.md  analyze_biomarker_proposals.py  docker-compose.yml  env_manager.sh  environment-prod.yml  environment.yml  final_comprehensive_test.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  scientific_reporter.py  setup.py  test_installation.py  test_robustness.py  test_zero_library.py  tier1_demo_suite.py  tier1_interactive.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-minimal.yml  ci.yml  pr-quality-checks.yml
MultiOmicsFusionIntelligence/: README.md  late_fusion_multiomics.py
MultiOmicsFusionIntelligence/analytics/: longevity_network_analyzer.py
MultiOmicsFusionIntelligence/biomarker_discovery/: biomarker_engine.py
MultiOmicsFusionIntelligence/drug_repurposing/: drug_repurposing_engine.py
MultiOmicsFusionIntelligence/integration/: biologically_validated_integrator.py  multi_omics_integrator.py
RegenOmicsMaster/: README.md
RegenOmicsMaster/cloud/: aws_batch_config.yaml  gcp_lifesciences_config.yaml
RegenOmicsMaster/ml/: biologically_validated_scorer.py  cell_rejuvenation_scoring.py
RegenOmicsMaster/qc/: run_fastqc.sh  run_multiqc.sh
RegenOmicsMaster/workflows/: Snakefile  align_config.yaml  config.yaml  generate_report.py  main.nf
RegenOmicsMaster/workflows/scripts/: differential_expression_analysis.py
SingleCellRejuvenationAtlas/: README.md
SingleCellRejuvenationAtlas/python/: biologically_validated_analyzer.py  rejuvenation_analyzer.py
SingleCellRejuvenationAtlas/r/: seurat_rejuvenation_analysis.R
SingleCellRejuvenationAtlas/streamlit/: app.py
archive/testing_files/: test_installation.py  test_integration_simple.py  test_normalization.py  tier1_enhanced_integration_demo.py  tier1_final_integration_demo.py  tier1_working_integration_demo.py
benchmarks/: enhanced_benchmark_integration.py  run_benchmarks.sh
data/: validated_biomarkers.yaml
examples/: data_governance_demo.py  scientific_reporting_demo.py
tests/: __init__.py  conftest.py  test_determinism.py  test_leakage.py  test_runner.py  test_schemas.py  test_transforms.py
tier1_suite/: __init__.py  bulk.py  bulk_cli.py  cli.py  interactive.py  multi_omics.py  multi_omics_cli.py  single_cell.py  single_cell_cli.py
tier1_suite/config/: __init__.py  config_defaults.yaml  provenance.py  settings.py
tier1_suite/utils/: __init__.py  scientific_reporter.py  transforms.py
utils/: advanced_statistics.py
